:sparkles: Feat: File 삭제 로직 수정
<footer>
- 관련: #112